# kedro-spaceflights-dagster

./: .gitmodules  README.md  pyproject.toml  tox.ini
.github/workflows/: rtd-preview.yml  test.yml
conf/: logging.yml
conf/base/: catalog.yml  dagster.yml
data/02_intermediate/: preprocessed_companies.pq  preprocessed_shuttles.pq
data/03_primary/: model_input_table.pq
docs/source/: conf.py
notebooks/: Example.ipynb
src/kedro_dagster/: pipeline_registry.py
src/kedro_dagster/dagster/: __init__.py  assets.py  definitions.py
src/kedro_dagster/pipelines/data_processing/: nodes.py
src/kedro_dagster/pipelines/data_science/: __init__.py
src/kedro_spaceflights_dagster/: __init__.py  definitions.py
src/kedro_spaceflights_dagster/pipelines/data_processing/: __init__.py
src/kedro_spaceflights_dagster/pipelines/data_science/: nodes.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
