[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kedro-dagster"
readme = "README.md"
requires-python = ">=3.11"
description = ""
dependencies = [
    "dagster>=1.8.13",
    "dagster-cloud",
    "dagster-webserver", 
    "kedro>=0.19.8",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset]>=3.0",
    "kedro-telemetry>=0.3.1",
    "kedro-viz>=6.7.0",
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "scikit-learn",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy",
    "hypothesis",
    "pytest",
    "pytest-cov",
]
doc = [ 
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.dagster]
module_name = "src.kedro_dagster.dagster.definitions"
code_location_name = "kedro_dagster"

[tool.kedro]
project_name = "kedro-dagster"
package_name = "kedro_dagster"
kedro_init_version = "0.19.8"

[tool.pdm.version]
source = "scm"

[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # Pydocstyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "kedro_dagster"
disallow_untyped_defs = true

# Ignore certain missing imports
# [[tool.mypy.overrides]]
# module = "thirdparty.*"
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.kedro_telemetry]
project_id = "70cfda1e66df4780a97edf2fb6e446fa"
